--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -7,21 +7,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="{% static 'public/IniciarSesion.css' %}">
-    <script defer type="module" src="{% static 'src/index.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'public/bs/bootstrap.min.css' %}">
+    <!-- <script defer type="module" src="{% static 'src/index.js' %}"></script> -->
   </head>
   <body>
     <div class="logo">
-      <p class="logo__titulo">GAIA</p>
-      <div class="logo__imagen">
+      <div class="logo__titulo">GAIA</div>
+      <div class="logo__img">
         <img src="{% static 'images/logo.png' %}" alt="">
       </div>
     </div>
-    <form class="ingresar" action="" method="post">
-      <p class="ingresar__titulo">Ingresar</p>
-      <input class="ingresar__campo" type="email" name="correo" placeholder="Correo">
-      <input class="ingresar__campo" type="password" name="contrasena" placeholder="Contraseña...">
-      <input class="ingresar__btn" type="submit" value="Ingresar">
-      <a href="#">Aun no tengo cuenta</a>
-    </form>
+    <div class="container">
+      <div class="ingresar">
+        <form class="form col-8">
+          <div class="form__titulo">Ingresar</div>
+          <input class="form__campo" type="email" name="correo" placeholder="Correo">
+          <input class="form__campo"type="password" name="contrasena" placeholder="Contraseña">
+          <input class="form__btn" type="submit">
+          <a class="form__enlace" href="#">Aun no tengo cuenta</a>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
