--- a/static/public/IniciarSesion.css
+++ b/static/public/IniciarSesion.css
@@ -2,75 +2,77 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box
-}
-
 body {
   font-family: "Open Sans";
   background-image: linear-gradient(73deg, var(--azul_claro), var(--azul_oscuro));
-  height: 1000px;
+  height: 100vh;
 }
 
 .logo {
-  height: 838px;
-  width: 812px;
+  width: 56%;
+  height: 81%;
   position: absolute;
-  left: 314px;
-  display: flex;
-  flex-direction: column;
+  top: 4%;
+  left: 22%;
+  z-index: 1;
 }
 
 .logo__titulo {
+  /*background-color: green;*/
+  height: 13%;
   color: white;
-  margin: 0 auto;
   font-size: 96px;
   font-weight: lighter;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.logo__imagen {
-  height: 735px;
-  width: 810px;
+.logo__img {
+  /*background-color: cyan;*/
+  width: 100%;
+  height: 87%;
+  display: flex;
+  justify-content: center;
   & img {
+    height: 100%;
     width: 100%;
-    position: absolute;
   }
+}
+
+.container {
+  /*background-color: gray;*/
+  height: 100%;
 }
 
 .ingresar {
-  height: 686px;
-  width: 661px;
+  /*background-color: green;*/
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
   background-color: rgba(102, 111, 136, .75);
   border-radius: 67px;
+  height: 68%;
   position: relative;
-  left: 389px;
-  top: 175px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  & a {
-    display: block;
-    margin-top: 59px;
-    color: #4CC9F0;
-    font-size: 20px;
-    font-weight: lighter;
-  }
+  z-index: 2;
 }
 
-.ingresar__titulo {
+.form__titulo {
   color: white;
-  opacity: 1;
   font-weight: bold;
   font-size: 32px;
-  margin-top: 38px;
-  margin-bottom: 122px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
 }
 
-.ingresar__campo {
-  height: 61px;
-  width: 489px;
+.form__campo {
+  height: 50px;
+  width: 68%;
   color: white;
   border: solid 1px white;
   border-radius: 3px;
@@ -78,18 +80,28 @@ body {
   background-color: var(--gris_oscuro);
   font-weight: lighter;
   font-size: 24px;
-  padding-left: 63px;
+  padding-left: 40px;
   margin-bottom: 70px;
+  margin-left: 15%;
 }
 
-.ingresar__btn {
-  height: 63px;
-  width: 489px;
+.form__btn {
+  display: block;
+  height: 50px;
+  width: 68%;
   color: white;
   font-weight: lighter;
   font-size: 24px;
   background-color: #F72585;
   border: none;
+  border-radius: 3px;
   box-shadow: 0 3px 10px black;
-  margin-top: 31px;
+  margin-left: 15%;
+}
+
+.form__enlace {
+  display: inline-block;
+  color: #4CC9F0;
+  margin-top: 16px;
+  margin-left: 40%;
 }
