Views: Iniciar y Crear

--- a/static/public/colores.css
+++ b/static/public/colores.css
@@ -3,4 +3,6 @@
   --gris_oscuro: #788199; /*rgba(120, 129, 153, 1)*/
   --azul_oscuro: #4361EE; /*rgba(67, 97, 238, 1)*/
   --azul_claro: #4895EF; /*rgba(72, 149, 239, 1)*/
+  --rosa: #F72585;
+  --celeste: #4CC9F0;
 }
