--- a/templates/VerActividad.html
+++ b/templates/VerActividad.html
@@ -2,4 +2,49 @@
 
 {% block title %}Ver Actividad{% endblock %}
 
-{% block content %}<p>Ver actividad</p>{% endblock %}
+{% block content %}
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
+{% endblock %}
