views: VerActividad y ActualizarCuenta terminados

--- a/templates/VerActividad.html
+++ b/templates/VerActividad.html
@@ -3,48 +3,11 @@
 {% block title %}Ver Actividad{% endblock %}
 
 {% block content %}
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
-<p>hola</p>
+<div class="timeline">
+  <div class="publicar" id="publicar">
+    <div class="publicar__foto"></div>
+    <input class="publicar__entrada" type="text" placeholder="¿Qué estás pensando?">
+  </div>
+  <div class="posts" id="posts"></div>
+</div>
 {% endblock %}
