--- a/static/public/index.css
+++ b/static/public/index.css
@@ -1,8 +1,13 @@
 @import "colores.css";
+@import "cabecera.css";
+@import "contactos.css";
+@import "timeline.css";
+@import "actualizar.css";
+
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-body {
+* {
   font-family: "Open Sans";
 }
 
@@ -10,110 +15,11 @@ body {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  overflow: scroll;
+  overflow: hidden;
   background: #3E4144;
 }
 
-.cabecera {
-  height: 57px;
-  background-image: linear-gradient(90deg, #F72585, #4361EE);
-}
-
-.cabecera__columna {
-  height: 57px;
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-
-.cabecera__icono {
-  width: 43px;
-  height: 43px;
-  margin: 0 30px;
-  & img {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-  }
-}
-
-.cabecera__icono:hover {
-  cursor: pointer;
-}
-
-.buscar {
-  display: flex;
-  align-items: center;
-  width: 80%;
-}
-
-.cabecera__busqueda {
-  width: 60%;
-  height: 43px;
-  margin-left: 20px;
-  padding-left: 40px;
-  background-color: #6F6F6F;
-  border: none;
-  outline: none;
-  border-radius: 3px;
+.cuerpo {
+  margin-top: 81px;
   color: white;
-  font-size: 16px;
-  font-weight: lighter;
-}
-
-.bi-search {
-  position: absolute;
-  left: 145px;
-  font-size: 21px;
-  font-weight: lighter;
-  color: white;
-}
-
-.cabecera__btn {
-  width: 43px;
-  height: 43px;
-  margin-right: 20px;
-  border: solid 1px white;
-  border-radius: 5px;
-  overflow: hidden;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  & i {
-    font-size: 21px;
-  }
-}
-
-.cabecera__btn:hover {
-  cursor: pointer;
-}
-
-.perfil {
-  width: 132px;
-  height: 43px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.perfil__foto {
-  background-color: black;
-  display: block;
-  width: 43px;
-  height: 43px;
-  border-radius: 50px;
-  overflow: hidden;
-  & img {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.perfil__nombre {
-  color: white;
-  margin-left: 8px;
-  text-decoration: underline;
-  text-transform: capitalize;
-  cursor: pointer;
 }
