--- a/static/public/cabecera.css
+++ b/static/public/cabecera.css
@@ -1,5 +1,3 @@
-@import "colores.css";
-
 .cabecera {
   height: 57px;
   background-image: linear-gradient(90deg, #F72585, #4361EE);
@@ -10,6 +8,7 @@
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
+  position: relative;
 }
 
 .cabecera__icono {
@@ -33,7 +32,7 @@
   width: 60%;
   height: 43px;
   margin-left: 20px;
-  padding-left: 40px;
+  padding-left: 64px;
   background-color: #6F6F6F;
   border: none;
   outline: none;
@@ -98,4 +97,39 @@
   text-decoration: underline;
   text-transform: capitalize;
   cursor: pointer;
+}
+
+.opciones {
+  width: 223px;
+  height: 65px;
+  background-color: #6F6F6F;
+  position: absolute;
+  top: 57px;
+  left: 63px;
+  & a {
+    text-decoration: none;
+  }
+}
+
+.opciones__btn {
+  width: 204px;
+  height: 21px;
+  font-size: 15px;
+  margin-top: 8px;
+  margin-left: 9px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.morado {
+  background-color: #7209B7;
+}
+
+.rosa {
+  background-color: #B5179E;
 }
