--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -8,7 +8,7 @@
   <p class="form__titulo">Ingresar</p>
   <input class="form__campo ancho" type="email" name="correo" placeholder="Correo">
   <input class="form__campo ancho" type="password" name="contrasena" placeholder="Contraseña">
-  <input class="form__btn ancho" type="submit" value="Ingresar">
+  <a class="form__btn ancho" href="{% url 'indexVerActividad' %}">Ingresar</a>
   <a class="form__link" href="{% url 'indexCrearCuenta' %}">Aun no tengo cuenta</a>
 </form>
 {% endblock %}
