--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -40,6 +40,14 @@
                   <div class="perfil__foto"></div>
                   <div class="perfil__nombre">text</div>
                 </div>
+                <div class="opciones" hidden>
+                  <a href="{% url 'indexActualizarCuenta' %}">
+                    <button class="opciones__btn rosa" type="button">Actualizar cuenta</button>
+                  </a>
+                  <a href="{% url 'indexIniciarSesion' %}">
+                    <button class="opciones__btn morado" type="button">Cerrar sesión</button>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
