--- a/templates/VerActividad.html
+++ b/templates/VerActividad.html
@@ -6,7 +6,9 @@
 <div class="timeline">
   <div class="publicar" id="publicar">
     <div class="publicar__foto"></div>
-    <input class="publicar__entrada" type="text" placeholder="¿Qué estás pensando?">
+    <a href="#" data-bs-toggle="modal" data-bs-target="#modal-publicar">
+      <input class="publicar__entrada" type="text" placeholder="¿Qué estás pensando?">
+    </a>
   </div>
   <div class="posts" id="posts"></div>
 </div>
