--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -71,5 +71,31 @@
         </div>
       </div>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="modal-publicar" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form class="overlay__publicar">
+            <div class="overlay__publicar__fila">
+              <div class="overlay__publicar__perfil"></div>
+              <textarea class="overlay__publicar__texto" placeholder="¿Qué estás pensando?"></textarea>
+            </div>
+            <div class="overlay__publicar__fila">
+              <div class="overlay__publicar__archivo">
+                <i class="bi bi-card-image"></i>
+                Foto
+              </div>
+              <div class="overlay__publicar__archivo">
+                <i class="bi bi-link-45deg"></i>
+                Video
+              </div>
+            </div>
+            <div class="overlay__publicar__fila">
+              <button class="overlay__publicar__btn" type="button">Publicar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
