--- a/templates/CrearCuenta.html
+++ b/templates/CrearCuenta.html
@@ -8,7 +8,7 @@
   <p class="form__titulo">Registrarse</p>
   <div class="fila">
     <input class="form__campo" type="text" name="nombre" placeholder="Nombre">
-    <input class="form__campo" type="date" name="fecha">
+    <input class="form__campo" type="date" name="fecha" placeholder="gfbsvf">
   </div>
   <div class="fila">
     <input class="form__campo" type="email" name="correo" placeholder="Correo">
