--- a/static/public/cabecera.css
+++ b/static/public/cabecera.css
@@ -15,6 +15,7 @@
   width: 43px;
   height: 43px;
   margin: 0 30px;
+  overflow: hidden;
   & img {
     width: 100%;
     height: 100%;
@@ -25,6 +26,7 @@
 .buscar {
   display: flex;
   align-items: center;
+  position: relative;
   width: 80%;
 }
 
@@ -44,7 +46,7 @@
 
 .bi-search {
   position: absolute;
-  left: 145px;
+  left: 40px;
   font-size: 21px;
   font-weight: lighter;
   color: white;
