Comunicado Frontend con Backend

--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -9,6 +9,6 @@
   <input class="form__campo ancho-64" type="email" name="correo" placeholder="Correo">
   <input class="form__campo ancho-64" type="password" name="contrasena" placeholder="Contraseña">
   <input class="form__btn ancho-64" type="submit" value="Ingresar">
-  <a class="form__link" href="{% url 'indexCrearCuenta' %}">Aun no tengo cuenta</a>
+  <a class="form__link" href="{% url 'CrearCuenta:index' %}">Aun no tengo cuenta</a>
 </form>
 {% endblock %}
