--- a/templates/CrearCuenta.html
+++ b/templates/CrearCuenta.html
@@ -4,15 +4,16 @@
 {% block title %}Crear Cuenta{% endblock %}
 
 {% block content %}
-<form id="form-registrar">
+<form id="form-registrar" action="{% url 'CrearCuenta:new'%}" method="POST">
+  {% csrf_token %}
   <p class="form__titulo">Registrarse</p>
   <div class="fila">
     <input class="form__campo" type="text" name="nombre" placeholder="Nombre">
-    <input class="form__campo" type="date" name="fecha" placeholder="gfbsvf">
+    <input class="form__campo" type="date" name="fecha">
   </div>
   <div class="fila">
     <input class="form__campo" type="email" name="correo" placeholder="Correo">
-    <input class="form__campo" type="email_c" name="correo" placeholder="Confirme correo">
+    <input class="form__campo" type="email" name="correo_c" placeholder="Confirme correo">
   </div>
   <div class="fila">
     <div class="rad-btn">
@@ -33,6 +34,6 @@
     <input class="form__campo" type="password" name="contrasena_c" placeholder="Confirme contraseña">
   </div>
   <input class="form__btn ancho-50" type="submit" value="Crear">
-  <a class="form__link" href="{% url 'indexIniciarSesion' %}">Ya tengo cuenta</a>
+  <a class="form__link" href="{% url 'IniciarSesion:index' %}">Ya tengo cuenta</a>
 </form>
 {% endblock %}
