--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -44,7 +44,7 @@
                   <a href="{% url 'indexActualizarCuenta' %}">
                     <button class="opciones__btn rosa" type="button">Actualizar cuenta</button>
                   </a>
-                  <a href="{% url 'indexIniciarSesion' %}">
+                  <a href="{% url 'IniciarSesion:index' %}">
                     <button class="opciones__btn morado" type="button">Cerrar sesión</button>
                   </a>
                 </div>
