--- a/templates/layout/outter.html
+++ b/templates/layout/outter.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %} - GAIA</title>
     <link rel="stylesheet" href="{% static 'public/outter.css' %}">
+    <script defer type="module" src="{% static 'src/outter.js' %}"></script>
   </head>
   <body>
     <div id="app">
