--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -75,22 +75,25 @@
     <div class="modal fade" id="modal-publicar" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
-          <form class="overlay__publicar" action="#" method="POST">
+          <form class="overlay__publicar" action="#" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="overlay__publicar__fila">
               <div class="overlay__publicar__perfil"></div>
               <textarea class="overlay__publicar__texto" placeholder="¿Qué estás pensando?"></textarea>
             </div>
             <div class="overlay__publicar__fila">
-              <div class="overlay__publicar__archivo">
+              <input type="file" id="publicar-btn-foto" hidden>
+              <label class="overlay__publicar__archivo" for="publicar-btn-foto">
                 <i class="bi bi-card-image"></i>
                 Foto
-              </div>
-              <div class="overlay__publicar__archivo">
+              </label>
+              <input type="file" id="publicar-btn-video" hidden>
+              <label class="overlay__publicar__archivo" for="publicar-btn-video">
                 <i class="bi bi-link-45deg"></i>
                 Video
-              </div>
+              </label>
             </div>
+            <div class="overlay__publicar__pendientes"></div>
             <div class="overlay__publicar__fila">
               <button class="overlay__publicar__btn" type="submit">Publicar</button>
             </div>
