--- a/templates/VerActividad.html
+++ b/templates/VerActividad.html
@@ -12,4 +12,16 @@
   </div>
   <div class="posts" id="posts"></div>
 </div>
+
+{% if messages %}
+  {% for message in messages%}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      {{message}}
+      <<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  {% endfor %}
+{% endif %}
+
 {% endblock %}
