Ya se guarda el de texto de la publicacion en la base de datos

--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -82,12 +82,12 @@
               <textarea class="overlay__publicar__texto" name="texto" placeholder="¿Qué estás pensando?"></textarea>
             </div>
             <div class="overlay__publicar__fila">
-              <input type="file" id="publicar-btn-foto" hidden>
+              <input type="file" id="publicar-btn-foto" name="foto" hidden>
               <label class="overlay__publicar__archivo" for="publicar-btn-foto">
                 <i class="bi bi-card-image"></i>
                 Foto
               </label>
-              <input type="file" id="publicar-btn-video" hidden>
+              <input type="url" id="publicar-btn-video" name="video" hidden>
               <label class="overlay__publicar__archivo" for="publicar-btn-video">
                 <i class="bi bi-link-45deg"></i>
                 Video
