--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'public/index.css' %}">
     <link rel="stylesheet" href="{% static 'public/bs/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" >
     <script defer type="module" src="{% static 'src/inner.js' %}"></script>
     <script defer type="text/javascript" src="{% static 'src/bs/bootstrap.bundle.min.js' %}"></script>
   </head>
