Avance: actualizar cuenta

--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -42,7 +42,7 @@
                   <div class="perfil__nombre">text</div>
                 </div>
                 <div class="opciones" hidden>
-                  <a href="{% url 'indexActualizarCuenta' %}">
+                  <a href="{% url 'ActualizarCuenta:index' %}">
                     <button class="opciones__btn rosa" type="button">Actualizar cuenta</button>
                   </a>
                   <a href="{% url 'IniciarSesion:index' %}">
