--- a/templates/VerActividad.html
+++ b/templates/VerActividad.html
@@ -7,7 +7,7 @@
   <div class="publicar" id="publicar">
     <div class="publicar__foto"></div>
     <a href="#" data-bs-toggle="modal" data-bs-target="#modal-publicar">
-      <input class="publicar__entrada" type="text" placeholder="¿Qué estás pensando?">
+      <input class="publicar__entrada text-white" type="text" placeholder="¿Qué estás pensando?">
     </a>
   </div>
   <div class="posts" id="posts"></div>
