--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -20,7 +20,7 @@
           <div class="cabecera row">
             <div class="col-9">
               <div class="cabecera__columna">
-                <a class="cabecera__icono" href="{% url 'indexVerActividad' %}">
+                <a class="cabecera__icono" href="{% url 'VerActividad:index' %}">
                   <img src="{% static 'images/inicio.jpeg' %}" alt="">
                 </a>
                 <div class="buscar">
