--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -76,7 +76,7 @@
     <div class="modal fade" id="modal-publicar" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
-          <form class="overlay__publicar" action="#" method="POST" enctype="multipart/form-data">
+          <form class="overlay__publicar" action="{% url 'Publicar:crear' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="overlay__publicar__fila">
               <div class="overlay__publicar__perfil"></div>
