--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -45,7 +45,7 @@
                   <a href="{% url 'ActualizarCuenta:index' %}">
                     <button class="opciones__btn rosa" type="button">Actualizar cuenta</button>
                   </a>
-                  <a href="{% url 'IniciarSesion:index' %}">
+                  <a href="{% url 'CerrarSesion:cerrar_sesion' %}">
                     <button class="opciones__btn morado" type="button">Cerrar sesión</button>
                   </a>
                 </div>
