--- a/templates/ActualizarCuenta.html
+++ b/templates/ActualizarCuenta.html
@@ -3,6 +3,7 @@
 {% block title %}Actualizar Cuenta{% endblock %}
 
 {% block content %}
+{{mensaje}}
 <div class="actualizar">
   <div class="actualizar__titulo">Actualizar cuenta</div>
   <div class="formularios">
