--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="perfil">
                   <div class="perfil__foto"></div>
-                  <div class="perfil__nombre">text</div>
+                  <div class="perfil__nombre">{{user.username}}</div>
                 </div>
                 <div class="opciones" hidden>
                   <a href="{% url 'ActualizarCuenta:index' %}">
