--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -63,10 +63,10 @@
           <aside class="contactos col-3">
             <div class="contactos__titulo">Contactos</div>
             <div class="contactos__lista">
-              <div class="contacto">
+              <!-- <div class="contacto">
                 <div class="contacto__foto"></div>
                 <a class="contacto__nombre" href="#">texto</a>
-              </div>
+              </div> -->
             </div>
           </aside>
         </div>
