--- a/templates/layout/inner.html
+++ b/templates/layout/inner.html
@@ -89,8 +89,13 @@
               </label>
               <input type="file" id="publicar-btn-foto" name="foto">
             </div>
-            <input type="text" name="enlace" placeholder="Escriba aqui el enlace...">
-            <div class="overlay__publicar__pendientes"></div>
+            <div class="overlay__publicar__fila">
+              <label class="overlay__publicar__archivo" for="publicar-enlace">
+                <i class="bi bi-link-45deg"></i>
+                Enlace
+              </label>
+              <input type="text" id="publicar-enlace" class="overlay__publicar__enlace" name="enlace" placeholder="Escriba aqui el enlace...">
+            </div>
             <div class="overlay__publicar__fila">
               <button class="overlay__publicar__btn" type="submit">Publicar</button>
             </div>
