--- a/templates/layout/outter.html
+++ b/templates/layout/outter.html
@@ -7,8 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %} - GAIA</title>
     <link rel="stylesheet" href="{% static 'public/outter.css' %}">
+    <link rel="stylesheet" href="{% static 'public/bs/bootstrap.min.css' %}">
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" >
     <script defer type="module" src="{% static 'src/outter.js' %}"></script>
+    <script defer type="text/javascript" src="{% static 'src/bs/bootstrap.bundle.min.js' %}"></script>
   </head>
   <body>
     <div id="app">
