--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -4,7 +4,12 @@
 {% block title %}Iniciar Sesion{% endblock %}
 
 {% block content %}
-{{ error }}
+{% for m in messages %}
+<div class="alert alert-primary alert-dismissible fade show">
+  <strong>Error: </strong>{{m}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="cerrar"></button>
+</div>
+{% endfor %}
 <form id="form-ingresar" action="{% url 'IniciarSesion:iniciar_sesion' %}" method="POST">
   {% csrf_token %}
   <p class="form__titulo">Ingresar</p>
