--- a/templates/ActualizarCuenta.html
+++ b/templates/ActualizarCuenta.html
@@ -3,7 +3,12 @@
 {% block title %}Actualizar Cuenta{% endblock %}
 
 {% block content %}
-{{mensaje}}
+{% for m in messages %}
+<div class="alert alert-success alert-dismissible fade show">
+  <strong>Alerta: </strong>{{m}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="cerrar"></button>
+</div>
+{% endfor %}
 <div class="actualizar">
   <div class="actualizar__titulo">Actualizar cuenta</div>
   <div class="formularios">
