--- a/static/public/timeline.css
+++ b/static/public/timeline.css
@@ -8,7 +8,7 @@
 
 .publicar {
   width: 625px;
-  height: 91px;
+  min-height: 91px;
   display: flex;
   align-items: center;
   border-radius: 5px;
@@ -66,6 +66,7 @@
 
 .overlay__publicar__texto {
   min-height: 78px;
+  max-height: 300px;
   width: 422px;
   color: white;
   font-size: 20px;
@@ -84,9 +85,12 @@
   font-size: 20px;
   font-weight: normal;
   background-color: #6F6F6F;
+  border-radius: 5px;
   border: none;
   outline: none;
-  padding: 3px 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
 }
 
 .overlay__publicar__archivo {
