--- a/static/public/index.css
+++ b/static/public/index.css
@@ -3,6 +3,8 @@
 @import "contactos.css";
 @import "timeline.css";
 @import "actualizar.css";
+@import "solicitud.css";
+
 
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
