--- a/static/public/cabecera.css
+++ b/static/public/cabecera.css
@@ -30,6 +30,56 @@
   width: 80%;
 }
 
+.buscar__menu {
+  height: 250px;
+  width: 60%;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.3);
+  top: 43px;
+  left: 19px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+}
+
+.buscar__perfil {
+  width: 90%;
+  height: 43px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.buscar__perfil__foto {
+  background-color: black;
+  display: block;
+  width: 43px;
+  height: 43px;
+  border-radius: 50px;
+  overflow: hidden;
+  & img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.buscar__perfil__nombre {
+  color: white;
+  margin-left: 8px;
+  text-decoration: underline;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+
+.buscar__contenedor {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .cabecera__busqueda {
   width: 60%;
   height: 43px;
@@ -65,6 +115,9 @@
   align-items: center;
   & i {
     font-size: 21px;
+  }
+  & a {
+    color: white;
   }
 }
 
